# stock-ai-assistant

./: .gitignore  clustering_eval_classified_draft.numbers
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dart_collection_failures.jsonl  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: context.py  middleware.py  prompts.py  runtime.py  trace.py  validator.py
backend/app/api/: router.py
backend/app/core/: __init__.py  config.py
backend/app/db/: advisory_lock.py  client.py
backend/app/jobs/: dart_company_profiles.py  dart_corporate_events.py  dart_corrections.py  dart_major_events.py  dart_regular_facts.py  dart_structured.py  disclosures.py  financials.py  news.py  prices.py  rag_index_job.py  reports.py  scheduler.py
backend/app/ml/: __init__.py  clustering.py  embeddings.py  generation.py  sentiment.py
backend/app/rag/: __init__.py  chunking.py  fusion.py  indexing.py  normalization.py  prompting.py  query_plan.py  report_parser.py  retrieval.py
backend/app/repositories/: __init__.py  dart.py  news.py  news_clusters.py  news_v2.py  rag.py
backend/app/schemas/: clusters.py  fundamentals.py  news.py  prices.py  qa.py
backend/app/services/: __init__.py  agent_qa.py  facts.py  news_backfill.py  news_clustering.py  news_issue_briefs.py  news_sentiment.py  rag_qa.py  rag_qa_facts.py  relevance.py  (+1 more)
backend/docs/: DART_COLLECTION_COMPLETION_README.md  DART_DATA_GAP_PLAN.md  DART_DATA_INVENTORY_AFTER.md  DART_DATA_INVENTORY_BEFORE.md  LLM_ASSIGNER_PRODUCTION_PIPELINE.md  NEWS_CLUSTERING_BACKFILL_REPORT_2026-07-21.md  NEWS_CLUSTERING_GPT_REVIEW.md  NEWS_CLUSTER_SENTIMENT.md  NEWS_PIPELINE.md
backend/migrations/: 0003_news_clustering_pipeline.sql  0004_news_easy_explanation.sql  0005_article_image_url.sql  0006_news_backfill_runs.sql  0007_news_backfill_dirty_clusters.sql  0008_news_backfill_dirty_repair.sql  0010_dart_source_completion.sql  0011_dart_document_unavailable_status.sql  0012_rag_core.sql  0013_research_reports.sql  0014_rag_hybrid_search.sql  0015_rag_rls_storage.sql  0016_rag_search_semantic.sql  0017_rag_hybrid_rrf.sql  0018_rag_hybrid_lexical_exact_first.sql  0019_rag_terms_extend.sql  0020_news_cluster_sentiment.sql  0021_stock_news_issue_briefs.sql  README.md
backend/scripts/: agent_preflight.py  apply_rag_migrations.py  backfill_dart.py  backfill_news.py  backfill_news_clusters.py  backfill_news_sentiment.py  build_clustering_eval_sample.py  classify_news_relevance.py  complete_dart_collection.py  create_rag_storage.py  dryrun_bok_terms.py  eval_offline_reclustering.py  eval_v2_clustering.py  evaluate_agent.py  import_research_reports.py  load_bok_terms.py  load_research_reports.py  parse_bok_terms.py  phase5_dryrun_full.py  phase5_dryrun_parse.py  phase5_dryrun_structure.py  phase5_eval_report_search.py  phase5_inventory.py  phase5_verify_parser.py  rag_index_news.py  rag_phase2_trial.py  rag_phase3_eval.py  rag_phase4_trial.py  research_reports_schema.sql  run_full_news_backfill.py  run_full_news_v2.py  seed_rag_terms.py  summarize_v2.py  verify_bok_loaded.py  verify_bok_sample.py  verify_dart_backfill.py
(+223 files in other folders)
