[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for the stock assistant MVP"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4",
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.7,<3",
    "requests>=2.32,<3",
    "supabase>=2,<3",
    "trafilatura>=2,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
