[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for the stock assistant MVP"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4",
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.115,<1",
    # Phase 5.5 Agentic RAG: LangChain v1 create_agent + LangGraph runtime.
    # Upstage 는 OpenAI 호환 API 이므로 langchain-openai 의 ChatOpenAI(base_url=Upstage)로 쓴다.
    # langchain-upstage 0.7.7 은 tokenizers<0.21 을 강제해 프로젝트 transformers>=5 와
    # 해결 불가 충돌이 나므로 사용하지 않는다(5.5-A preflight 문서 참조).
    "langchain>=1.3.14,<1.4",
    "langgraph>=1.2.5,<1.3",
    "langchain-openai>=1.4,<2",
    "numpy>=2,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "requests>=2.32,<3",
    "sentence-transformers>=5,<6",
    "supabase>=2,<3",
    "torch>=2,<3",
    "trafilatura>=2,<3",
    "transformers>=5,<6",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    # ruff는 마이너 버전마다 포맷/린트 규칙이 바뀌므로 CI-로컬 결과 일치를 위해 고정.
    "ruff==0.15.22",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 100
# Colab/Jupyter 노트북은 실행용 산출물이라 소스 린트 대상에서 제외.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# DART 엔드포인트/계정 레지스트리는 한 줄=한 항목이 대조·검증에 유리하다.
"app/sources/dart_major_events.py" = ["E501"]
"app/sources/dart_regular_facts.py" = ["E501"]
"app/sources/dart_financials.py" = ["E501"]
"scripts/verify_dart_backfill.py" = ["E501"]
# 한국어 기준·설명 문자열이 많아 100자 제한이 부적절하다.
"scripts/build_clustering_eval_sample.py" = ["E501"]
"scripts/eval_offline_reclustering.py" = ["E501"]
"scripts/run_full_news_v2.py" = ["E501"]
# 실험 폴더는 self-contained라 sys.path 주입 후 import(E402)가 불가피하다.
# 한국어 프롬프트·설명 문자열은 100자 제한이 부적절해 E501도 예외.
"experiments/**/*.py" = ["E402", "E501"]
